--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -30,6 +30,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="AxInterop.ShockwaveFlashObjects, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -63,6 +66,7 @@
     <Compile Include="Darkorbit\Commands\ClientRequestCode.cs" />
     <Compile Include="Darkorbit\Commands\ClientVersionCheck.cs" />
     <Compile Include="Darkorbit\Commands\Command.cs" />
+    <Compile Include="Darkorbit\Generator.cs" />
     <Compile Include="Darkorbit\Commands\PostHandshake\ActionRequest.cs" />
     <Compile Include="Darkorbit\Commands\PostHandshake\BoxInit.cs" />
     <Compile Include="Darkorbit\Commands\PostHandshake\BuildingInit.cs" />
@@ -74,7 +78,6 @@
     <Compile Include="Darkorbit\Commands\PostHandshake\Notify.cs" />
     <Compile Include="Darkorbit\Commands\PostHandshake\MapChangeConfirmation.cs" />
     <Compile Include="Darkorbit\Commands\PostHandshake\MapChanged.cs" />
-    <Compile Include="Darkorbit\Commands\PostHandshake\RemoteInitStageOne.cs" />
     <Compile Include="Darkorbit\Commands\PostHandshake\ReviveShip.cs" />
     <Compile Include="Darkorbit\Commands\PostHandshake\ShipDestroyed.cs" />
     <Compile Include="Darkorbit\Commands\PostHandshake\DestroyItem.cs" />
@@ -112,8 +115,18 @@
     <Compile Include="Flash\External\ExternalInterfaceSerializer.cs" />
     <Compile Include="HttpManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RemoteClient.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="VanillaClient.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
